大まかなレイアウト作り

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,14 @@
   </head>
 
   <body>
-    <div id="app">
+    <div class="container" id="app">
+      <div class="navbar">
+        ヘッダー的ななにか
+      </div>
       <router-view></router-view>
+      <div class="footer">
+        フッター的ななにか
+      </div>
     </div>
   </body>
   <%= javascript_include_tag 'application' %>
