--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Pankara</title>
   </head>
 
