--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Pankara</title>
   </head>
 
   <body>
-    <div class="container" id="app">
-      <div class="navbar">
-        ヘッダー的ななにか
-      </div>
-      <router-view></router-view>
-      <div class="footer">
-        フッター的ななにか
-      </div>
-    </div>
+    <v-app id="app">
+      <v-navigation-drawer app></v-navigation-drawer>
+      <v-toolbar app>
+        <v-toolbar-side-icon></v-toolbar-side-icon>
+        <v-toolbar-title>🐼 パンダリンのカラオケランド</v-toolbar-title>
+        <v-spacer></v-spacer>
+        <v-toolbar-items class="hidden-sm-and-down">
+          <v-btn flat>ログイン</v-btn>
+          <v-text-field append-icon="search" hide-details single-line></v-text-field>
+        </v-toolbar-items>
+      </v-toolbar>
+      <v-content>
+        <v-container fluid>
+          <router-view></router-view>
+        </v-container>
+      </v-content>
+    </v-app>
   </body>
   <%= javascript_include_tag 'application' %>
 </html>
