カラオケ一覧を自分のカラオケで絞れるように

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,10 @@
       <v-navigation-drawer app></v-navigation-drawer>
       <v-toolbar app>
         <v-toolbar-side-icon></v-toolbar-side-icon>
-        <v-toolbar-title>🐼 パンダリンのカラオケランド</v-toolbar-title>
+        <v-toolbar-title>カラオケ一覧</v-toolbar-title>
         <v-spacer></v-spacer>
         <v-toolbar-items class="hidden-sm-and-down">
           <v-btn flat>ログイン</v-btn>
-          <v-text-field append-icon="search" hide-details single-line></v-text-field>
         </v-toolbar-items>
       </v-toolbar>
       <v-content>
