カラオケ一覧画面からカラオケ詳細画面へのリンクを設定

--- a/app/stylesheet/application.scss
+++ b/app/stylesheet/application.scss
@@ -8,7 +8,8 @@
   text-overflow: ellipsis;
 }
 
-.list__tile:hover {
+// メニュー項目オンマウスでグレーに
+.menuable__content__active .list__tile:hover {
   background-color: #E0E0E0;
 }
 
