--- a/app/stylesheet/application.scss
+++ b/app/stylesheet/application.scss
@@ -11,20 +11,21 @@
 }
 
 // リストメニュー項目
-.navigation-drawer,.menuable__content__active {
-  .list__tile:hover {
-    background-color: #E0E0E0;
+.v-navigation-drawer,.v-menuable__content__active {
+  .v-list__tile:hover {
+    background-color: #f5f5f5;
     cursor: pointer;
   }
 }
 
 // v-containerを画面いっぱいに
 .container {
-  padding: 0;
+  padding: 0.5em;
 }
 
 // 矢印つきのボックス
 .arrow-box {
+  width: 100%;
   padding: 15px;
   position: relative;
   background: #fff7dd;
@@ -56,9 +57,9 @@
   }
 }
 
-.tabs__item {
+.v-tabs__item {
   color: black;
-  .icon {
+  .v-icon {
     color: black;
   }
 }
