--- a/app/stylesheet/application.scss
+++ b/app/stylesheet/application.scss
@@ -27,6 +27,12 @@ a {
   color: #000;
 }
 
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
 // リストメニュー項目
 .v-navigation-drawer,.v-menuable__content__active {
   .v-list__tile:hover {
