歌唱履歴一覧画面のボタンを押すと歌唱履歴追加ダイアログが表示されるように

--- a/app/stylesheet/application.scss
+++ b/app/stylesheet/application.scss
@@ -22,6 +22,13 @@ body {
   cursor: pointer;
 }
 
+// https://github.com/vuetifyjs/vuetify/issues/3875#issuecomment-383440994
+.noscroll {
+  position: fixed;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 a {
   text-decoration: none;
   color: #000;
